message : spotbugs list modify